React Proctor Exam Highlight

--- a/public/css/contents.css
+++ b/public/css/contents.css
@@ -542,6 +542,7 @@ ul.status_desc li.cheating {background:url(../img/cheating_focus.gif) no-repeat 
 .proctor_exam_container .video_area .std_video_set .web_mobile_cam video {float:left; margin:0; padding:0; line-height: 0; letter-spacing: 0; font-size: 0; border:0;}
 .proctor_exam_container .video_area .std_video_set .web_mobile_cam video:first-child {border-right: 1px solid #b0bdce; }
 .std_warning_area.voice {width: 439px; height: 368px; position: absolute; z-index: 9999; background: #86ff5266; bottom: 20px; right: 0; border-radius: 10px; border: 2px solid #3cce40;}
+.std_warning_area.eye {width: 439px; height: 368px; position: absolute; z-index: 9999; background: #ff464666; bottom: 20px; right: 0; border-radius: 10px; border: 2px solid #ca1e1e;}
 
 /* Teacher :: 시험 통계 */
 .class_statistic_wrap {width:100%;}
