--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -184,7 +184,13 @@ body {
     font-size: 16px;
     display: block;
     margin-top: -5px;
-    margin-bottom: 20px;
+}
+
+.CameraSubTitle {
+    font-size: 16px;
+    display: block;
+    font-weight: 600;
+    margin-top: 10px;
 }
 
 .CameraBox {
